@startuml

title __TP's Class Diagram__\n

  namespace sample {
    class sample.DodawanieFakturyController {
    }
  }
  

  namespace sample {
    class sample.DodawanieKlientaController {
    }
  }
  

  namespace sample {
    class sample.DodawanieUslugiController {
    }
  }
  

  namespace sample {
    class sample.Faktura {
    }
  }
  

  namespace sample {
    class sample.FakturyStorage {
    }
  }
  

  namespace sample {
    interface sample.ILoader {
    }
  }
  

  namespace sample {
    class sample.Klient {
    }
  }
  

  namespace sample {
    class sample.KlientStorage {
    }
  }
  

  namespace sample {
    class sample.MainController {
    }
  }
  

  namespace sample {
    class sample.MockingLoader {
    }
  }
  

  namespace sample {
    class sample.ObliczCeneFaktury {
    }
  }
  

  namespace sample {
    class sample.ObliczCeneUslugi {
    }
  }
  

  namespace sample {
    class sample.ResourceManager {
    }
  }
  

  namespace sample {
    class sample.Usluga {
    }
  }
  

  namespace sample {
    class sample.WyswietlanieFakturyController {
    }
  }
  

  sample.DodawanieFakturyController o-- sample.MainController : mainController
  sample.DodawanieFakturyController o-- sample.Faktura : tworzonaFaktura
  sample.DodawanieFakturyController o-- sample.Klient : wybranyKlient
  sample.DodawanieUslugiController o-- sample.DodawanieFakturyController : dodawanieFakturyController
  sample.Faktura o-- sample.Klient : klient
  sample.MainController -up-|> javafx.application.Application
  sample.MainController o-- sample.ILoader : loader
  sample.MockingLoader .up.|> sample.ILoader
  sample.ResourceManager o-- sample.FakturyStorage : fakturyStorage
  sample.ResourceManager o-- sample.KlientStorage : klientStorage
  sample.WyswietlanieFakturyController o-- sample.MainController : mainController
  sample.WyswietlanieFakturyController o-- sample.Klient : wybranyKlient


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
